// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RowLoader should render correctly 1`] = `
<Holder
  height={20}
  width={480}
>
  <rect
    height="7"
    rx="3"
    ry="3"
    width="250"
    x="30"
    y="0"
  />
  <rect
    height="7"
    rx="3"
    ry="3"
    width="70"
    x="300"
    y="0"
  />
  <rect
    height="7"
    rx="3"
    ry="3"
    width="95"
    x="385"
    y="0"
  />
  <rect
    height="7"
    rx="3"
    ry="3"
    width="80"
    x="50"
    y="12"
  />
  <rect
    height="7"
    rx="3"
    ry="3"
    width="200"
    x="150"
    y="12"
  />
  <rect
    height="7"
    rx="3"
    ry="3"
    width="120"
    x="360"
    y="12"
  />
  <rect
    height="20"
    rx="0"
    ry="0"
    width="20"
    x="0"
    y="0"
  />
</Holder>
`;

exports[`parseCvssScore cvssV2 should render correct tooltip content 1`] = `
<TooltipContent
  className={null}
>
  <div
    className="pf-c-tooltip__content"
  >
    Prior to 2016 (approximately), CVEs were scored with Common Vulnerability Scoring System v2.
  </div>
</TooltipContent>
`;

exports[`parseCvssScore cvssV2 should render value in span 1`] = `
<span>
  2.0
   
</span>
`;

exports[`parseCvssScore cvssV2 with labels should render correct tooltip content 1`] = `
<TooltipContent
  className={null}
>
  <div
    className="pf-c-tooltip__content"
  >
    Prior to 2016 (approximately), CVEs were scored with Common Vulnerability Scoring System v2.
  </div>
</TooltipContent>
`;

exports[`parseCvssScore cvssV2 with labels should render value in span 1`] = `
<span>
  2.0
   
  (CVSSv2)
</span>
`;

exports[`parseCvssScore cvssV3 1`] = `"2.0"`;

exports[`parseCvssScore no cvss should render N/A in span 1`] = `
<span>
  N/A
</span>
`;

exports[`parseCvssScore no cvss should render correct tooltip content 1`] = `
<TooltipContent
  className={null}
>
  <div
    className="pf-c-tooltip__content"
  >
    CVEs published before 2005 (approximately) did not have a CVSS Base Score.
  </div>
</TooltipContent>
`;
